--- a/public/styles.css
+++ b/public/styles.css
@@ -14,10 +14,11 @@ body {
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #e1d29d;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  opacity: 0.5;
 }
 
 header h1 {
@@ -67,7 +68,7 @@ footer p {
   height: 36px;
   cursor: pointer;
   outline: none;
-  background: #f5ba13;
+  background-color: #e1d29d;
   border-radius: 50%;
 }
 
@@ -94,7 +95,7 @@ form button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #f5ba13;
+  background-color: #e1d29d;
   color: #fff;
   border: none;
   border-radius: 50%;
